--- a/languages/elixir.org
+++ b/languages/elixir.org
@@ -1,3 +1,5 @@
+- https://github.com/Zensavona/domainatrex
+  A library for parsing TLDs from urls in Elixir
 https://elixirschool.com/en/
 https://github.com/elixirkoans/elixir-koans
 https://github.com/exercism/elixir
