--- a/ai.org
+++ b/ai.org
@@ -1,3 +1,9 @@
+- https://www.youtube.com/user/mathematicalmonk/videos
+- Video Channel
+  https://www.youtube.com/c/ShashankKalanithiData/videos
+- Video: Conal Elliott: Can Tensor Programming Be Liberated from the Fortran Data Paradigm?
+  https://www.youtube.com/watch?v=oaIMMclGuog
+  https://github.com/conal/talk-2021-can-tensor-programming-be-liberated
 - MIT http://introtodeeplearning.com/
   https://www.youtube.com/playlist?list=PLtBw6njQRU-rwp5__7C0oIVt26ZgjG9NI
 - (Welch Labs) Neural Networks Demystified https://www.youtube.com/playlist?list=PLiaHhY2iBX9hdHaRr6b7XevZtgZRa1PoU
