--- a/languages/clojure.org
+++ b/languages/clojure.org
@@ -20,18 +20,21 @@ EDN (extensible data notation): https://clojure.github.io/clojure/clojure.edn-ap
 - https://github.com/magomimmo/modern-cljs
 - https://www.cs.utexas.edu/users/novak/cs378contents.html
 - Simulating Machines in Clojure https://stopa.io/post/255
+- https://github.com/functional-koans/clojure-koans/
+- https://github.com/bbatsov/clojure-style-guide
+- https://clojuredocs.org/quickref
+* Podcasts
 - Podcast - https://clojuredesign.club/
 - Podcast - Clojurescript - https://open.spotify.com/show/3lnWCN0PAAywiN7gaxNzKZ
+* Videos
 - Podcast - Eric Normad - https://www.youtube.com/channel/UC2riBMG3qf1Di20ouRc76BA/videos
+- on the code again https://www.youtube.com/channel/UCKlYSDBb1KBcZyCRbniW1ig
 - Sci Cloj https://www.youtube.com/c/SciCloj/videos
 - re:clojure https://www.youtube.com/c/reclojure/videos
 - Course - Brian Will - the Clojure language - https://www.youtube.com/playlist?list=PLAC43CFB134E85266
 - Clojure Study Group - https://www.youtube.com/playlist?list=PLpr9V-R8ZxiDjyU7cQYWOEFBDR1t7t0wv
 - ClojuRU 2019 - https://www.youtube.com/playlist?list=PLvf-wiCQYkAVvrZr53Upxti9Hr3t7V4bW
 - Fulcro – Part 1: Getting Started https://www.youtube.com/watch?v=wEjNWUMCX78
-- https://github.com/functional-koans/clojure-koans/
-- https://github.com/bbatsov/clojure-style-guide
-- https://clojuredocs.org/quickref
 * Personalities
 ** Rich Hickey
 - Talks https://www.youtube.com/playlist?list=PLZdCLR02grLrEwKaZv-5QbUzK0zGKOOcr
@@ -549,7 +552,7 @@ cannot be changed outside their namespace
   > lein new luminus guestbook --template-version 3.91 -- +h2 +http-kit
 - hardcode a version by adding in ~/.lein/profiles.clj
   {:user {:plugins [[luminus/lein-template "2.9.9.2"]]}}
-- Dependencies
+- Template Dependencies
 | Name               | Description                                                                  | Home                                                    |
 |--------------------+------------------------------------------------------------------------------+---------------------------------------------------------|
 | bulma              | Webjars. Bulma: the modern CSS framework that just works.                    | https://bulma.io/                                       |
@@ -575,4 +578,77 @@ cannot be changed outside their namespace
 | ring-http-response | Handling HTTP Statuses with Clojure(Script)                                  | https://github.com/metosin/ring-http-response           |
 | selmer             | A fast, Django inspired template system in Clojure.                          | https://github.com/yogthos/Selmer                       |
 | struct             | Structural validation library for Clojure(Script)                            | https://github.com/funcool/struct                       |
-
+- Default repl namespace is *user* from *env/dev/clj/user.clj*
+  - Include functions that we won't want packaged in our application
+  - start/stop functions
+** resources/migration/*
+- Delete template migrations, and create a new one (after (start))
+  rm -f resources/migration/*
+- (create-migration "guestbook")
+- Write the new empty .sql files
+    #+begin_src sql
+CREATE TABLE guestbook
+(id INTEGER PRIMARY KEY AUTO_INCREMENT,
+name VARCHAR(30),
+message VARCHAR(200),
+timestamp TIMESTAMP DEFAULT CURRENT_TIMESTAMP);
+  #+end_src
+    #+begin_src sql
+  DROP TABLE guestbook;
+  #+end_src
+- (migrate)
+  (restart)
+- Dependencies CANNOT be loades dynamically by the JVM,
+  they need a restart of the REPL
+** resources/sql/queries.sql
+   Used by HugSQL, which creates function to interact with a database, based on SQL files
+   :! indicates the query is destructive
+   :n returns the number of affected rows
+   :? indicates a SELECT query
+   :* indicates that multiple rows are returned
+   #+begin_src sql
+-- :name save-message! :! :n
+-- :doc creates a new message using the name and message keys
+INSERT INTO guestbook
+(name, message)
+VALUES (:name, :message)
+-- :name get-messages :? :*
+-- :doc selects all available messages
+SELECT * from guestbook
+   #+end_src
+** src/clj/guestbook/db/core.clj
+   (conman/bind-connection *db* "sql/queries.sql")
+** {dev,test}-config.edn
+   - Not supposed to be commited to svn
+    :database-url "jdbc:h2:./guestbook_dev.db"
+   - Uses the :jvm-opts flags found in :project/{test,dev} profile in project.clj
+** Running queries
+   (in-ns 'guestbook.db.core)
+   (conman/bind-connection *db* "sql/queries.sql")
+   (get-messages)
+   (save-message! {:name "bob" :message "hello world"})
+   (get-messages)
+** test/clj/guestbook/db/core_test.clj
+   - Update (deftest)
+      #+begin_src clojure
+(deftest test-users
+  (jdbc/with-transaction [t-conn *db* {:rollback-only true}]
+    (is (= 1 (db/save-message!
+              t-conn
+              {:name "bob"
+               :message "hello world"}
+              {:connection t-conn})))
+    (is (= {:name "bob"
+            :message "hello world"}
+           (-> (db/get-messages t-conn {})
+               (first)
+               (select-keys [:name :message]))))))
+       #+end_src
+   - lein test
+   - lein test-refresh
+** src/clj/guestbook/routes/home.clj
+   Where the paths, functions, middleware are put together.
+** resources/html/home.html
+   - extends base.html and process the :doc through markdown
+** resources/html/home.html
+   - Setup to use Bulma CSS
